other-vpol/restrict-clusterrole-nodesproxy/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata: {name: restrict-clusterrole-nodesproxy-exceptions}
policies: [../restrict-clusterrole-nodesproxy.yaml]
resources: [../.kyverno-test/resource.yaml]
exceptions: [../.kyverno-test/exceptions.yaml]
results:
- {kind: ClusterRole, policy: restrict-clusterrole-nodesproxy, resources: [badcr01], result: pass, isValidatingPolicy: true}
